k8s_ing/hello_gke_ing_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-gke-ing
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-gke-ing
