k8s_ing/ingress_lb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-gke-ing
  annotations:
    kubernetes.io/ingress.class: gce
      #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: hello-gke-ing
            port:
              number: 80
